--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "homepage": "https://agentlab.ru/rdf-scheme-editor",
   "dependencies": {
     "antd": "^3.12.3",
+    "global": "^4.3.2",
     "i18next": "^15.0.2",
     "i18next-browser-languagedetector": "^3.0.0",
     "i18next-xhr-backend": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
-    "global": "^4.3.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-lifecycles-compat": "^3.0.4",
     "react-i18next": "^10.0.5",
     "react-jsonschema-form-antd": "^0.1.3",
+    "react-lifecycles-compat": "^3.0.4",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
